# Skynet

./: .gitignore  README.md  Test BERT.ipynb  config.py  develop.html  develop.ipynb  main.py  pyproject.toml  test_bert.ipynb
BERT/figures/model_v1/fold_1/: metrics_fold_1.txt
BERT/figures/model_v1/fold_2/: metrics_fold_2.txt
BERT/figures/model_v1/fold_3/: metrics_fold_3.txt
BERT/figures/model_v1/fold_4/: metrics_fold_4.txt
BERT/figures/model_v1/fold_5/: metrics_fold_5.txt
data/: clean_csv.ipynb
data/raw_datasets/: clean_csv.ipynb
data_processing/: cleaning.py  loader.py
frontend/: app.py
modeling/: random_forest.py
models/: Testing.pkl
pipeline/: core.py
transformer/: BERT.py  training.py
utils/: helpers.py
