[tool.poetry]
name = "skynet"
version = "0.1.0"
description = ""
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
spacy = "^3.8.5"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
seaborn = "^0.13.2"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
spacytextblob = "^5.0.0"
black = "^25.1.0"
notebook = "^7.4.0"
joblib = "^1.4.2"
transformers = "^4.51.3"
datasets = "^3.5.0"
peft = "^0.15.2"
hf-xet = "^1.0.3"
accelerate = ">=0.26.0"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
